--- a/conf/application.conf
+++ b/conf/application.conf
@@ -103,7 +103,6 @@ mongodb.uri = "mongodb://127.0.0.1:27017/organisations-details-api"
 
 auditing {
   enabled = true
-  traceRequests = true
   consumer {
     baseUri {
       host = localhost
@@ -156,7 +155,7 @@ api-config {
         "read:organisations-details-ho-suv" {
             fields = [
                 "E", "I", "J", "K", "L", "M",
-                "N", "O", "P", "Q", "R", "S", "T", "U"
+                "N", "O", "P", "Q", "R", "S", "T", "U", "V","W"
             ]
         }
         "read:organisations-details-ho-ssp" {
@@ -186,7 +185,7 @@ api-config {
         vat {
             title = "Get the organisation's VAT return details"
             endpoint = "/organisations/details/vat?matchId=<matchId>"
-            fields = ["N","O","P","Q","R","S","T","U"]
+            fields = ["N","O","P","Q","R","S","T","U","V","W"]
         }
       }
     }
@@ -212,14 +211,17 @@ api-config {
         M = "references/counts/dateTaken"
 
         # vat
-        N = "appDate"
-        O = "taxYears/taxYear"
-        P = "taxYears/vatReturns/calendarMonth"
-        Q = "taxYears/vatReturns/liabilityMonth"
-        R = "taxYears/vatReturns/numMonthsAssessed"
-        S = "taxYears/vatReturns/box6Total"
-        T = "taxYears/vatReturns/returnType"
-        U = "taxYears/vatReturns/source"
+        N = "vrn"
+        O = "appDate"
+        P = "extractDate"
+        Q = "vatPeriods/periodKey"
+        R = "vatPeriods/billingPeriodFromDate"
+        S = "vatPeriods/billingPeriodToDate"
+        T = "vatPeriods/numDaysAssessed"
+        U = "vatPeriods/box6Total"
+        V = "vatPeriods/returnType"
+        W = "vatPeriods/source"
+
     }
 }
 
