--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -528,27 +528,27 @@ components:
           description: The VAT period (VMF) or Period Assignment Key (ETMP VAT) for the return being reported. *Conditional Mandatory*
           example: "23AG"
         billingPeriodFromDate:
-          type: String
+          type: string
           description: The date the VAT period return starts. Date Format is in yyyy-MM-dd (ISO 8601). *Conditional Mandatory*
           example: "2023-08-30"
         billingPeriodToDate:
-          type: String
+          type: string
           description: The date the VAT period return ends. Date Format is in yyyy-MM-dd (ISO 8601). *Conditional Mandatory*
           example: "2023-08-30"
         numDaysAssessed:
-          type: String
+          type: string
           description: The number of days between billingPeriodFromDate and billingPeriodToDate inclusively. *Conditional Mandatory*
           example: 30
         box6Total:
-          type: String
+          type: number
           description: Box6 total outputs where the return is filed.
-          example: 6542
+          example: 6542.92
         returnType:
-          type: String
+          type: string
           description: Return received date if populated then 'Regular return' else if CA issued then 'Central Assessment' else 'ICR Issued' from VMF/VLDS. *Conditional Mandatory*
           example: "Regular Return"
         source:
-          type: String
+          type: string
           description: Sourced from “ADR(ETMP)” or “VMF”. *Conditional Mandatory*
           example: "ADR(ETMP)"
     VatReturnsDetailsResponse:
