DLS-9064 | Remove plain text secrets from application conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,7 +54,7 @@ play.modules.enabled += "uk.gov.hmrc.organisationsdetailsapi.config.ConfigModule
 # ~~~~~
 play.i18n.langs = ["en"]
 
-json.encryption.key = "fqpLDZ4smuDsekHkrEBlCA=="
+json.encryption.key = ""
 
 # Router
 # ~~~~~
