--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,22 +20,10 @@ include "backend.conf"
 appName = organisations-details-api
 appUrl = CHANGEME
 
-# An ApplicationLoader that uses Guice to bootstrap the application.
-play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
-
 # Primary entry point for all HTTP requests on Play applications
 play.http.requestHandler = "uk.gov.hmrc.organisationsdetailsapi.handlers.VersioningRequestHandler"
 
-# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
-# An audit connector must be provided.
-play.modules.enabled += "uk.gov.hmrc.play.audit.AuditModule"
-
-# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.graphite.GraphiteMetricsModule` or create your own.
-# A metric filter must be provided
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
-
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
 # Default http client
@@ -88,39 +76,15 @@ versioning {
 }
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
-metrics {
-  name = ${appName}
-  rateUnit = SECONDS
-  durationUnit = SECONDS
-  showSamples = true
-  jvm = true
-  enabled = true
-}
+metrics.enabled = true
 
 mongodb.uri = "mongodb://127.0.0.1:27017/organisations-details-api"
 
 # Microservice specific config
 
-auditing {
-  enabled = true
-  consumer {
-    baseUri {
-      host = localhost
-      port = 8100
-    }
-  }
-}
+auditing.enabled = true
 
 microservice {
-  metrics {
-    graphite {
-      host = graphite
-      port = 2003
-      prefix = play.${appName}.
-      enabled = false
-    }
-  }
-
   services {
     auth {
       host = localhost
