--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,6 +22,7 @@ appUrl = CHANGEME
 
 # Primary entry point for all HTTP requests on Play applications
 play.http.requestHandler = "uk.gov.hmrc.organisationsdetailsapi.handlers.VersioningRequestHandler"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
